--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body h1, .main-wrapper h1, html h1 {
 header {
   width: 100%;
   position: fixed;
-  height: 78px;
+  height: 80px;
   background-color: #DA251C;
   z-index: 20;
 }
@@ -158,7 +158,7 @@ header .h_number {
 .main_wrapper .s_intro {
   position: relative;
   width: 100%;
-  max-height: 978px;
+  max-height: 980px;
   background: #000;
   overflow: hidden;
 }
@@ -218,7 +218,24 @@ header .h_number {
 .main_wrapper .s_directions {
   position: relative;
   width: 100%;
-  max-height: 978px;
+  max-height: 980px;
   background: #FFF;
   overflow: hidden;
+}
+/* line 3, ../sass/components/_directions.scss */
+.main_wrapper .s_directions .directions__text-head {
+  position: relative;
+  z-index: 5;
+  left: 5%;
+  padding-top: 47px;
+  max-width: 995px;
+}
+/* line 10, ../sass/components/_directions.scss */
+.main_wrapper .s_directions .directions__nav {
+  position: relative;
+  z-index: 5;
+}
+/* line 13, ../sass/components/_directions.scss */
+.main_wrapper .s_directions .directions__nav div {
+  display: inline;
 }
