--- a/sass/components/_directions.scss
+++ b/sass/components/_directions.scss
@@ -64,7 +64,7 @@
           left: 55%;
           max-width: 430px;
           h1{
-            @include var_textBebasNew(#DA251C,125px," Book");
+            @include var_textBebasNew(#DA251C,7.7em," Book");
           }
 
        }
