--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 15, ../sass/base/_variables.scss */
-.main_wrapper .s_intro .intro__main_text, .main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head {
+.main_wrapper .s_intro .intro__main_text, .main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_studio .studio__teacher .teachers .description a {
   font-family: "Arial";
   font-size: 0.803em;
   font-weight: 400;
@@ -304,7 +304,7 @@ header .h_number {
 .main_wrapper .s_directions .directions_text h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
-  font-size: 125px;
+  font-size: 7.7em;
   font-weight: 300;
 }
 /* line 1, ../sass/components/_studio.scss */
@@ -312,10 +312,11 @@ header .h_number {
   position: relative;
   width: 100%;
   max-height: 980px;
-  background: #FFF;
+  background: #000;
   overflow: hidden;
+  color: #FFF;
 }
-/* line 3, ../sass/components/_studio.scss */
+/* line 4, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__head {
   position: relative;
   z-index: 5;
@@ -323,4 +324,89 @@ header .h_number {
   padding: 122px 0 32px;
   max-width: 995px;
   line-height: 1.2em;
+}
+/* line 13, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher {
+  text-align: center;
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 12, C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.3/sass/susy/output/support/_clearfix.scss */
+.main_wrapper .s_studio .studio__teacher:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+/* line 16, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers {
+  vertical-align: middle;
+  display: inline-block;
+  padding: 1.7% 0;
+  width: 30.30303%;
+  float: left;
+  margin-left: 1.51515%;
+  margin-right: 1.51515%;
+}
+/* line 21, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers div {
+  display: inline-block;
+  text-align: left;
+}
+/* line 25, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .ico {
+  float: left;
+  width: 46.06061%;
+  float: left;
+  margin-left: 0.30303%;
+  margin-right: 0.30303%;
+}
+/* line 28, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .ico img {
+  width: 90%;
+}
+/* line 32, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description {
+  width: 52.72727%;
+  float: left;
+  margin-left: 0.30303%;
+  margin-right: 0.30303%;
+  float: right;
+}
+/* line 35, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description h1 {
+  color: #DA251C;
+  font-family: "Bebas Neue Book";
+  font-size: 3.5em;
+  font-weight: 300;
+  padding-bottom: 0.4em;
+}
+/* line 39, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description p {
+  padding-bottom: 0.3em;
+}
+/* line 42, ../sass/components/_studio.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description a {
+  color: #FFF;
+  font-size: 0.915em;
+}
+/* line 27, ../sass/base/_variables.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description .more:before {
+  content: '';
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  position: relative;
+  top: 17.5px;
+  background: url("../images/button_small_question.png") no-repeat;
+}
+/* line 27, ../sass/base/_variables.scss */
+.main_wrapper .s_studio .studio__teacher .teachers .description .applicate:before {
+  content: '';
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  position: relative;
+  top: 17.5px;
+  background: url("../images/button_small_check_teachers.png") no-repeat;
 }
