--- a/sass/components/_studio.scss
+++ b/sass/components/_studio.scss
@@ -1,5 +1,6 @@
 .s_studio {
-  @include sections(#FFF);
+  @include sections(#000);
+  color: #FFF;
   .studio__head{
     position: relative;
     z-index: 5;
@@ -8,5 +9,48 @@
     max-width: 995px;
     line-height: 1.2em;
     @extend %var_textArial;
+  }
+  .studio__teacher{
+    text-align: center;
+    @include container (95%);
+    .teachers{
+      vertical-align: middle;
+      display: inline-block;
+      padding: 1.7% 0;
+      @include span(1 of 3 split);
+      div{
+        display: inline-block;
+        text-align: left;
+      }
+      .ico{
+        float: left;
+        @include span (7 of 15 split);
+        img{
+          width: 90%;
+        }
+      }
+      .description{
+        @include span (8 of 15 split);
+        float: right;
+        h1{
+          @include var_textBebasNew(#DA251C,3.5em," Book");
+          padding-bottom: 0.4em;
+        }
+        p{
+          padding-bottom: 0.3em;
+        }
+        a{
+          color: #FFF;
+          @extend %var_textArial;
+          font-size: 0.915em;
+        }
+        .more{
+          @include before_image(35px,'../images/button_small_question.png');
+        }
+        .applicate{
+          @include before_image(35px,'../images/button_small_check_teachers.png');
+        }
+      }
+    }
   }
 }
