--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,21 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 15, ../sass/base/_variables.scss */
-.main_wrapper .s_intro .intro__main_text, .main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_studio .studio__teacher .teachers .description a {
+/* line 8, ../sass/base/_variables.scss */
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_studio .studio__teacher .teachers .description a {
   font-family: "Arial";
   font-size: 0.803em;
   font-weight: 400;
+}
+
+/* line 13, ../sass/base/_variables.scss */
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head {
+  position: relative;
+  z-index: 5;
+  left: 3.5%;
+  padding: 122px 0 32px;
+  max-width: 995px;
+  line-height: 1.2em;
 }
 
 @font-face {
@@ -226,33 +236,23 @@ header .h_number {
   background: #FFF;
   overflow: hidden;
 }
-/* line 3, ../sass/components/_directions.scss */
-.main_wrapper .s_directions .directions__text-head {
-  position: relative;
-  z-index: 5;
-  left: 3.5%;
-  padding: 122px 0 32px;
-  max-width: 995px;
-  line-height: 1.2em;
-}
-/* line 12, ../sass/components/_directions.scss */
+/* line 6, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__nav {
   position: relative;
   z-index: 5;
   text-align: center;
 }
-/* line 16, ../sass/components/_directions.scss */
+/* line 10, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__nav div {
   display: inline;
   color: #2B1B1B;
   font-family: "Bebas Neue Bold";
   font-size: 1.5em;
   font-weight: 300;
-  font-family: "Bebas Neue Bold";
   margin: 0 1em;
   letter-spacing: 0.05em;
 }
-/* line 23, ../sass/components/_directions.scss */
+/* line 17, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__nav .active_dir {
   color: #DA251C;
   width: 161px;
@@ -263,13 +263,13 @@ header .h_number {
   background-position: 0px 10px;
   padding: 0.7em 1.1em 1.5em 1.1em;
 }
-/* line 34, ../sass/components/_directions.scss */
+/* line 28, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__slider {
   width: 300%;
   height: 100%;
   vertical-align: bottom;
 }
-/* line 39, ../sass/components/_directions.scss */
+/* line 33, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__slider div {
   width: 7.63359%;
   float: left;
@@ -282,7 +282,7 @@ header .h_number {
   -webkit-background-size: contain;
   background-size: contain;
 }
-/* line 50, ../sass/components/_directions.scss */
+/* line 44, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions__slider .center {
   left: -0.5%;
   padding-top: 2%;
@@ -292,7 +292,7 @@ header .h_number {
   height: 75%;
   background-position: left;
 }
-/* line 60, ../sass/components/_directions.scss */
+/* line 54, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions_text {
   position: absolute;
   z-index: 8;
@@ -300,7 +300,7 @@ header .h_number {
   left: 55%;
   max-width: 430px;
 }
-/* line 66, ../sass/components/_directions.scss */
+/* line 60, ../sass/components/_directions.scss */
 .main_wrapper .s_directions .directions_text h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
@@ -316,16 +316,7 @@ header .h_number {
   overflow: hidden;
   color: #FFF;
 }
-/* line 4, ../sass/components/_studio.scss */
-.main_wrapper .s_studio .studio__head {
-  position: relative;
-  z-index: 5;
-  left: 3.5%;
-  padding: 122px 0 32px;
-  max-width: 995px;
-  line-height: 1.2em;
-}
-/* line 13, ../sass/components/_studio.scss */
+/* line 7, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher {
   text-align: center;
   max-width: 95%;
@@ -338,7 +329,7 @@ header .h_number {
   display: block;
   clear: both;
 }
-/* line 16, ../sass/components/_studio.scss */
+/* line 10, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers {
   vertical-align: middle;
   display: inline-block;
@@ -348,12 +339,12 @@ header .h_number {
   margin-left: 1.51515%;
   margin-right: 1.51515%;
 }
-/* line 21, ../sass/components/_studio.scss */
+/* line 15, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers div {
   display: inline-block;
   text-align: left;
 }
-/* line 25, ../sass/components/_studio.scss */
+/* line 19, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .ico {
   float: left;
   width: 46.06061%;
@@ -361,11 +352,11 @@ header .h_number {
   margin-left: 0.30303%;
   margin-right: 0.30303%;
 }
-/* line 28, ../sass/components/_studio.scss */
+/* line 22, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .ico img {
   width: 90%;
 }
-/* line 32, ../sass/components/_studio.scss */
+/* line 26, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description {
   width: 52.72727%;
   float: left;
@@ -373,7 +364,7 @@ header .h_number {
   margin-right: 0.30303%;
   float: right;
 }
-/* line 35, ../sass/components/_studio.scss */
+/* line 29, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
@@ -381,16 +372,16 @@ header .h_number {
   font-weight: 300;
   padding-bottom: 0.4em;
 }
-/* line 39, ../sass/components/_studio.scss */
+/* line 33, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description p {
   padding-bottom: 0.3em;
 }
-/* line 42, ../sass/components/_studio.scss */
+/* line 36, ../sass/components/_studio.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description a {
   color: #FFF;
   font-size: 0.915em;
 }
-/* line 27, ../sass/base/_variables.scss */
+/* line 37, ../sass/base/_variables.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description .more:before {
   content: '';
   display: inline-block;
@@ -400,7 +391,7 @@ header .h_number {
   top: 17.5px;
   background: url("../images/button_small_question.png") no-repeat;
 }
-/* line 27, ../sass/base/_variables.scss */
+/* line 37, ../sass/base/_variables.scss */
 .main_wrapper .s_studio .studio__teacher .teachers .description .applicate:before {
   content: '';
   display: inline-block;
