--- a/sass/base/_main-wrapper.scss
+++ b/sass/base/_main-wrapper.scss
@@ -9,4 +9,5 @@
   @import "components/intro.scss";
   @import "components/directions.scss";
   @import "components/studio.scss";
+  @import "components/event.scss";
 }
