--- a/sass/components/_event.scss
+++ b/sass/components/_event.scss
@@ -1,6 +1,51 @@
 .s_event {
   @include var_Sections(#000);
+  color: #FFF;
   .event__head{
     @extend %var_top-short-description;
+  }
+  .event__information{
+    text-align: center;
+    @include container (95%);
+    .events{
+      vertical-align: middle;
+      display: inline-block;
+      padding: 1.7% 0;
+      @include span(1 of 3 split);
+      div{
+        display: inline-block;
+        text-align: left;
+      }
+      .foto{
+        float: left;
+        @include span (7 of 15 split);
+        img{
+          width: 90%;
+        }
+      }
+      .description{
+        @include span (8 of 15 split);
+        float: right;
+        h1{
+          @include var_TextBebasNew(#DA251C,3.5em," Book");
+          padding-bottom: 0.4em;
+          max-width: 80%;
+        }
+        p{
+          padding-bottom: 0.3em;
+        }
+        a{
+          color: #FFF;
+          @extend %var_text-arial;
+          font-size: 0.915em;
+        }
+        .more{
+          @include var_BeforeImage(35px,'../images/button_small_question.png');
+        }
+        .applicate{
+          @include var_BeforeImage(35px,'../images/button_small_check_teachers.png');
+        }
+      }
+    }
   }
 }
