Changes in application

--- a/sass/base/_main-wrapper.scss
+++ b/sass/base/_main-wrapper.scss
@@ -10,4 +10,5 @@
   @import "components/directions.scss";
   @import "components/studio.scss";
   @import "components/event.scss";
+  @import "components/application.scss";
 }
