--- a/css/style.css
+++ b/css/style.css
@@ -68,14 +68,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 8, ../sass/base/_variables.scss */
-.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a {
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a {
   font-family: "Arial";
   font-size: 0.803em;
   font-weight: 400;
 }
 
 /* line 13, ../sass/base/_variables.scss */
-.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head {
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head {
   position: relative;
   z-index: 5;
   left: 3.5%;
@@ -562,4 +562,41 @@ header .h_number:before {
   position: relative;
   top: 15.5px;
   background: url("../images/button_small_check_teachers.png") no-repeat;
+}
+/* line 1, ../sass/components/_application.scss */
+.main_wrapper .s_application {
+  position: relative;
+  width: 100%;
+  max-height: 980px;
+  background: #000;
+  overflow: hidden;
+  color: #FFF;
+}
+/* line 7, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform {
+  width: 100%;
+}
+/* line 9, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform div {
+  display: inline-block;
+}
+/* line 12, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .now {
+  width: 58.18182%;
+  float: left;
+  margin-left: 0.90909%;
+  margin-right: 0.90909%;
+}
+/* line 14, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .now div {
+  width: 30.30303%;
+  float: left;
+  margin-left: 1.51515%;
+  margin-right: 1.51515%;
+}
+/* line 18, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .load {
+  width: 31.25%;
+  float: left;
+  margin-right: 3.125%;
 }
