--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 8, ../sass/base/_variables.scss */
-.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a {
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a, .main_wrapper .s_application .application__inform .now div a {
   font-family: "Arial";
   font-size: 0.803em;
   font-weight: 400;
@@ -574,29 +574,81 @@ header .h_number:before {
 }
 /* line 7, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__inform {
+  padding: 4px 0 0 32px;
   width: 100%;
+  height: 25.5%;
 }
-/* line 9, ../sass/components/_application.scss */
+/* line 11, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__inform div {
   display: inline-block;
+  vertical-align: top;
 }
-/* line 12, ../sass/components/_application.scss */
+/* line 15, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__inform .now {
   width: 58.18182%;
   float: left;
   margin-left: 0.90909%;
   margin-right: 0.90909%;
 }
-/* line 14, ../sass/components/_application.scss */
+/* line 17, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__inform .now div {
   width: 30.30303%;
   float: left;
   margin-left: 1.51515%;
   margin-right: 1.51515%;
 }
-/* line 18, ../sass/components/_application.scss */
+/* line 19, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .now div h1 {
+  color: #DA251C;
+  font-family: "Bebas Neue Book";
+  font-size: 3.5em;
+  font-weight: 300;
+  padding-bottom: 8px;
+}
+/* line 23, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .now div .data {
+  padding-bottom: 0;
+}
+/* line 26, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .now div a {
+  color: #FFF;
+  font-size: 0.915em;
+}
+/* line 37, ../sass/base/_variables.scss */
+.main_wrapper .s_application .application__inform .now div .applicate:before {
+  content: '';
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  position: relative;
+  top: 15.5px;
+  background: url("../images/button_small_check_teachers.png") no-repeat;
+}
+/* line 36, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .divider {
+  width: 5%;
+  margin-top: 1%;
+  height: 55%;
+  border-left: 1px solid #545454;
+  background-position: right;
+}
+/* line 43, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__inform .load {
-  width: 31.25%;
-  float: left;
-  margin-right: 3.125%;
+  width: 15%;
+}
+/* line 46, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__inform .load a {
+  color: #DA251C;
+  font-family: "Bebas Neue Book";
+  font-size: 3.5em;
+  font-weight: 300;
+}
+/* line 53, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form {
+  width: 100%;
+  border: 1px solid #fff;
+}
+/* line 57, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form .send_form div {
+  display: inline;
 }
