--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 8, ../sass/base/_variables.scss */
-.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_directions .directions_text p, .main_wrapper .s_directions .directions_text a, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a, .main_wrapper .s_application .application__inform .now div a {
+.main_wrapper .s_directions .directions__text-head, .main_wrapper .s_studio .studio__head, .main_wrapper .s_event .event__head, .main_wrapper .s_application .application__head, .main_wrapper .s_intro .intro__main_text, .main_wrapper .s_directions .directions_text p, .main_wrapper .s_directions .directions_text a, .main_wrapper .s_studio .studio__teacher .teachers .description a, .main_wrapper .s_event .event__information .events .description a, .main_wrapper .s_application .application__inform .now div a, .main_wrapper .s_application .application__form #send_form {
   font-family: "Arial";
   font-size: 0.803em;
   font-weight: 400;
@@ -678,35 +678,97 @@ header .h_number:before {
 }
 /* line 55, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__form #send_form {
+  border: 1px solid #FFFFFF;
   position: relative;
   left: 3.5%;
-  width: 47.2%;
+  width: 51.2%;
+  font-size: 1em;
 }
-/* line 60, ../sass/components/_application.scss */
+/* line 62, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__form #send_form .form-subheader {
-  width: 100%;
+  width: 95.5%;
   background: #FFFFFF;
   color: #DA251C;
   font-family: "Bebas Neue Book";
   font-size: 2.5em;
   font-weight: 300;
-  padding: 1% 4%;
+  padding: 1% 0 1% 3.5%;
 }
-/* line 66, ../sass/components/_application.scss */
+/* line 68, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__form #send_form .form-left {
   display: inline;
   width: 38.02817%;
   float: left;
   background: #150303;
 }
-/* line 72, ../sass/components/_application.scss */
+/* line 73, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left div {
+  padding-left: 10%;
+  width: 90%;
+}
+/* line 77, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left div ~ * {
+  display: inline-block;
+}
+/* line 81, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_1 p {
+  width: 13.15789%;
+  float: left;
+}
+/* line 84, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_1 input {
+  width: 71.05263%;
+  float: left;
+}
+/* line 89, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_2 p {
+  width: 35.83333%;
+  float: left;
+}
+/* line 92, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_2 input {
+  width: 47.61905%;
+  float: left;
+}
+/* line 97, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_3 #il_31 {
+  width: 22.40664%;
+  float: left;
+}
+/* line 100, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_3 #il_32 {
+  width: 22.40664%;
+  float: left;
+}
+/* line 103, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_3 #il_33 {
+  width: 22.40664%;
+  float: left;
+  text-align: right;
+}
+/* line 108, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_3 #il_34 {
+  width: 13.27801%;
+  float: left;
+}
+/* line 113, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_4 p {
+  width: 47.61905%;
+  float: left;
+}
+/* line 116, ../sass/components/_application.scss */
+.main_wrapper .s_application .application__form #send_form .form-left .line_4 input {
+  width: 47.61905%;
+  float: left;
+}
+/* line 121, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__form #send_form .form-middle {
   display: inline;
   width: 38.02817%;
   float: left;
   background: #1c0404;
 }
-/* line 78, ../sass/components/_application.scss */
+/* line 127, ../sass/components/_application.scss */
 .main_wrapper .s_application .application__form #send_form .form.right {
   display: inline;
   width: 22.53521%;
