--- a/sass/base/_main-wrapper.scss
+++ b/sass/base/_main-wrapper.scss
@@ -8,7 +8,7 @@
   }
   @import "components/intro.scss";
   @import "components/directions.scss";
+  @import "components/masters.scss";
   @import "components/studio.scss";
-  @import "components/event.scss";
   @import "components/application.scss";
 }
