--- a/sass/components/_masters.scss
+++ b/sass/components/_masters.scss
@@ -1,29 +1,26 @@
-.s_event {
+#s_masters {
   @include var_Sections(#000);
   color: #FFF;
-  .event__head{
+  .masters__head{
     @extend %var_top-short-description;
   }
-  .event__information{
+  .masters__teacher{
     text-align: center;
     @include container (95%);
-    .events{
+    .teachers{
       vertical-align: middle;
       display: inline-block;
-      padding: 1.7% 0 3.8%;
+      padding: 1.7% 0;
       @include span(1 of 3 split);
       div{
         display: inline-block;
         text-align: left;
       }
-      .foto{
+      .ico{
         float: left;
         @include span (7 of 15 split);
         img{
           width: 90%;
-          -webkit-border-radius: 50%;
-          -moz-border-radius: 50%;
-          border-radius: 50%;
         }
       }
       .description{
@@ -32,13 +29,9 @@
         h1{
           @include var_TextBebasNew(#DA251C,3.5em," Book");
           padding-bottom: 0.4em;
-          max-width: 80%;
         }
         p{
-          padding-bottom: 1em;
-        }
-        .data{
-          padding-bottom: 0;
+          padding-bottom: 0.3em;
         }
         a{
           color: #FFF;
