--- a/sass/components/_studio.scss
+++ b/sass/components/_studio.scss
@@ -1,26 +1,29 @@
-.s_studio {
+#s_studio {
   @include var_Sections(#000);
   color: #FFF;
   .studio__head{
     @extend %var_top-short-description;
   }
-  .studio__teacher{
+  .studio__information{
     text-align: center;
     @include container (95%);
-    .teachers{
+    .studios{
       vertical-align: middle;
       display: inline-block;
-      padding: 1.7% 0;
+      padding: 1.7% 0 3.8%;
       @include span(1 of 3 split);
       div{
         display: inline-block;
         text-align: left;
       }
-      .ico{
+      .foto{
         float: left;
         @include span (7 of 15 split);
         img{
           width: 90%;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
         }
       }
       .description{
@@ -29,9 +32,13 @@
         h1{
           @include var_TextBebasNew(#DA251C,3.5em," Book");
           padding-bottom: 0.4em;
+          max-width: 80%;
         }
         p{
-          padding-bottom: 0.3em;
+          padding-bottom: 1em;
+        }
+        .data{
+          padding-bottom: 0;
         }
         a{
           color: #FFF;
